# twopoppy2

./: .gitignore  MANIFEST.in  README.md  environment.yml  fortran.f90  meson.build  pyproject.toml  setup.py
notebooks/: LBP-Test.ipynb  test_youdin_shu_2002.ipynb  twopoppy2.ipynb
twopoppy2/: __init__.py  constants.py  fortran.f90  main.py  meson.build  twopoppy2.py  utils.py
